# godot-distrho

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  SConstruct  default_bus_layout.tres  distrho_plugin_instance.gd  distrho_plugin_instance.gd.uid  distrho_plugin_instance.tscn  distrho_run_scene.gd  distrho_run_scene.gd.uid  distrho_schema.capnp  distrho_ui_instance.gd  distrho_ui_instance.gd.uid  export_presets.cfg  godot-distrho.cfg  godot_distrho_schema.capnp  hello.mp3.import  icon.svg.import  main.gd  main.gd.uid  main.tscn  main_ui.gd  main_ui.gd.uid  main_ui.tscn  project.godot  vcpkg.json
.github/workflows/: build_images.yml  builds.yml
addons/distrho/: main.gd  main.gd.uid  main.tscn
images/: godot_distrho.png.import
packaging/: zip-ignore.txt  zip-include.txt
packaging/templates/: zip-ignore.txt  zip-include.txt
platform/mingw/: build_debug.sh  build_release.sh
platform/osxcross/: Dockerfile  build_debug.sh  build_release.sh
platform/ubuntu/: Dockerfile  build_capnproto.sh  build_debug.sh  build_godot.sh  build_release.sh  build_schema.sh
platform/vcpkg/ports/boost-asio/: vcpkg.json
platform/vcpkg/triplets/: arm64-osxcross.cmake  x64-osxcross.cmake
src/: DistrhoPluginCommon.hpp  audio_effect_send_distrho_channel.cpp  audio_effect_send_distrho_channel.h  audio_stream_distrho.cpp  audio_stream_distrho.h  audio_stream_player_distrho.cpp  audio_stream_player_distrho.h  distrho_audio_port.cpp  distrho_audio_port.h  distrho_circular_buffer.cpp  distrho_circular_buffer.h  distrho_common.cpp  distrho_common.h  distrho_config.cpp  distrho_config.h  distrho_launcher.cpp  distrho_launcher.h  distrho_midi_event.cpp  distrho_midi_event.h  distrho_parameter.cpp  distrho_parameter.h  distrho_plugin_client.cpp  distrho_plugin_client.h  distrho_plugin_instance.cpp  distrho_plugin_instance.h  distrho_plugin_server.cpp  distrho_plugin_server.h  distrho_plugin_server_node.cpp  distrho_plugin_server_node.h  distrho_server.cpp  distrho_server.h  distrho_server_node.cpp  distrho_server_node.h  distrho_shared_memory.cpp  distrho_shared_memory.h  distrho_shared_memory_audio.cpp  distrho_shared_memory_audio.h  distrho_shared_memory_region.cpp  distrho_shared_memory_region.h  distrho_shared_memory_rpc.cpp  (+20 more)
src/plugin/: DistrhoPluginCommon.hpp  DistrhoPluginInfo.h  godot-distrho-plugin.cpp  godot-distrho-plugin.h  godot-distrho-ui.cpp  godot-distrho-ui.h  godot-distrho-utils.cpp  godot_distrho_client.cpp  godot_distrho_client.h  godot_distrho_dynamic_info.cpp  godot_distrho_dynamic_info.h  godot_distrho_gui_widget.cpp  godot_distrho_gui_widget.h  godot_distrho_gui_x11.cpp  godot_distrho_gui_x11.h  godot_distrho_images.cpp  godot_distrho_images.hpp  godot_distrho_plugin.cpp  godot_distrho_plugin.h  godot_distrho_plugin_client.cpp  godot_distrho_plugin_client.h  godot_distrho_plugin_info.cpp  godot_distrho_plugin_info.h  godot_distrho_plugin_server.cpp  godot_distrho_plugin_server.h  godot_distrho_ui.cpp  godot_distrho_ui.h  godot_distrho_ui_client.cpp  godot_distrho_ui_client.h  godot_distrho_ui_server.cpp  godot_distrho_ui_server.h  godot_distrho_utils.cpp  godot_distrho_utils.h  godot_gui_widget.cpp  godot_gui_widget.h  libgodot_distrho.cpp  libgodot_distrho.h  main.cpp
templates/: godotdistrho.gdextension.in
templates/lv2/linux/: godot-distrho_ui.ttl  manifest.ttl
templates/lv2/macos/: godot-distrho_dsp.ttl  godot-distrho_ui.ttl  manifest.ttl
templates/lv2/windows/: godot-distrho_dsp.ttl  manifest.ttl
